[tool.poetry]
name = "scanning"
version = "0.1.0"
description = "Scanning utility"
authors = ["Andrew Kail <andrew.a.kail@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
loguru = "^0.5.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
flake8-docstrings = "^1.5.0"
bandit = "^1.6.2"
neovim = "^0.3.1"

[tool.poetry.scripts]
scanner = 'scanner'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
